// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ranking should render correctly 1`] = `
<div
  className="ranking"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <div
    className="ranking__table-wrap"
  >
    <div
      className="ranking__filters"
    >
      <div
        className="ranking__search"
      >
        <Input
          name="search"
          onChange={[Function]}
          placeholder="Search fund"
          value=""
        />
      </div>
      <div
        className="ranking__sort"
      >
        <Dropdown
          label="Sort by"
          onChange={[Function]}
          value="+rank"
        />
      </div>
    </div>
    <div
      className="ranking__funds"
    />
  </div>
</div>
`;

exports[`Ranking should render correctly when loading 1`] = `
<div
  className="ranking"
>
  <style
    jsx={true}
  >
    <type
      0="p"
      1="r"
      2="o"
      3="p"
      4="s"
      key="key"
    >
      rendered
    </type>
  </style>
  <div
    className="ranking__loading"
  >
    <Spinner
      icon={true}
    />
  </div>
</div>
`;
